This commit refactors the application into a full-featured REST API for an asset management system.
The key features implemented are:
- REST API: The application is now a stateless REST service, with all controllers returning JSON. DTOs have been implemented for all API endpoints.
- JWT Authentication: Replaced session-based authentication with JWT, including a JwtRequestFilter and endpoints for registration and authentication.
- Role-based Access Control: Implemented EMPLOYEE, ADMIN, and STORE_MANAGER roles with distinct permissions enforced at the controller level using @PreAuthorize.
- MySQL Integration: The application is now configured to use a MySQL database for persistence. H2 is used for the test environment.
- Audit Logging: A new AuditLogService has been created to record all significant user actions, such as asset requests and approvals.
- Notification Service: A notification service has been implemented to send emails to users when the status of their requests changes.
- Business Logic: The business logic for asset request approval (Admin) and allocation (Store Manager) has been implemented in their respective controllers.
- Testing: Added a suite of integration tests for the new controllers. Fixed issues related to database state in the test environment by mocking service-layer dependencies.